# httpx2-aws-auth

./: LICENSE  README.md  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml
src/httpx2_aws_auth/: __init__.py
tests/: test_aws_sigv4_assume_role_auth.py  test_aws_sigv4_auth.py
