[project]
name = "httpx2-aws-auth"
version = "1.0.0"
description = "Provides AWS authentication classes to be used with httpx2 authentication parameter"
readme = "README.md"
authors = [
    { name = "Jakub Jantosik", email = "jakub.jantosik@gmail.com" }
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

requires-python = ">=3.10"

dependencies = [
    "httpx2>=2.2.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-freezeblaster>=2.1.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py310"
line-length = 120
lint.extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
